# legoshiVM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
class-loader/: attribute_factory.cpp  attribute_factory.h  class_file.cpp  class_file.h
class-loader/attributes/: attribute.cpp  attribute.h  code.cpp  code.h  constant_value.cpp  constant_value.h  exceptions.cpp  exceptions.h  line_number_table_attr.cpp  line_number_table_attr.h  local_variable_table_attr.cpp  local_variable_table_attr.h  source_file.cpp  source_file.h
class-loader/constant-pool-types/: constant_class_info.h  constant_double_info.h  constant_field_ref_info.h  constant_float_info.h  constant_integer_info.h  constant_interface_method_ref_info.h  constant_invoke_dynamic_info.h  constant_long_info.h  constant_method_handle_info.h  constant_method_ref_info.h  constant_method_type_info.h  constant_name_and_type_info.h  constant_pool_item.cpp  constant_pool_item.h  constant_string_info.h  constant_utf8_info.h
class-loader/core/: exception_table.h  flags.h  line_number_table.cpp  line_number_table.h  local_variable_table.cpp  local_variable_table.h  tags.h
class-loader/engine/: abstract_engine.cpp  abstract_engine.h  class_machine.cpp  class_machine.h
class-loader/engine/sub-engines/: class_attribute_engine.cpp  class_attribute_engine.h  class_const_pool_engine.cpp  class_const_pool_engine.h  class_exception_table_engine.cpp  class_exception_table_engine.h  class_field_engine.cpp  class_field_engine.h  class_interface_engine.cpp  class_interface_engine.h  class_item_engine.cpp  class_item_engine.h  class_line_number_table_engine.cpp  class_line_number_table_engine.h  class_local_variable_table_engine.cpp  class_local_variable_table_engine.h  class_method_engine.cpp  class_method_engine.h  class_mt_engine.cpp  class_mt_engine.h
class-loader/field-method/: field.cpp  field.h  interface.cpp  interface.h  methods.cpp  methods.h
class-loader/io/: loader.cpp  loader.h
class-loader/utility/: abstract_data.cpp  abstract_data.h  class_constant_pool.cpp  class_constant_pool.h  class_metadata.cpp  class_metadata.h
java/lang/: Object.java  String.java  System.java
javap/: javap_main.cpp  javap_main.h
src/class-loader/: attribute_factory.h  class_file.cpp  class_file.h
src/class-loader/attributes/: attribute.cpp  attribute.h  code.h  exceptions.cpp  exceptions.h  line_number_table_attr.h  local_variable_table_attr.cpp  local_variable_table_attr.h  source_file.h
src/class-loader/constant-pool-types/: constant_class_info.h  constant_double_info.h  constant_field_ref_info.h  constant_float_info.h  constant_integer_info.h  constant_interface_method_ref_info.h  constant_invoke_dynamic_info.h  constant_long_info.h  constant_method_handle_info.h  constant_method_ref_info.h  constant_name_and_type_info.h  constant_pool_item.cpp  constant_pool_item.h  constant_string_info.h  constant_utf8_info.h
src/class-loader/core/: exception_table.h  flags.h  line_number_table.cpp  line_number_table.h  local_variable_table.cpp  local_variable_table.h  tags.h
src/class-loader/engine/: abstract_engine.cpp  class_machine.cpp  class_machine.h
src/class-loader/engine/sub-engines/: class_attribute_engine.cpp  class_attribute_engine.h  class_exception_table_engine.h  class_interface_engine.h  class_item_engine.h  class_local_variable_table_engine.cpp  class_method_engine.cpp
src/class-loader/field-method/: field.cpp  field.h  interface.cpp  interface.h  methods.cpp  methods.h
src/class-loader/io/: loader.cpp  loader.h
src/class-loader/utility/: abstract_data.h  class_constant_pool.h  class_metadata.cpp  class_metadata.h
src/java/: main.cpp
src/javac/: CMakeLists.txt  jlexer.c  jlexer.h  main.cpp
src/javac/bytecodeStructure/: classFileStructure.hpp  constantPoolInfo.hpp  fieldFileStructure.hpp  methodStructure.hpp
src/javac/core/: main.cpp
src/javac/draco/: abstractCodeStatement.hpp
src/javac/draco/code/: assigment.cpp  assigment.hpp  call.cpp  call.hpp
src/javac/draco/syntax/: class.cpp  class.hpp  field.cpp  import.cpp  method.cpp  method.hpp
src/javac/io/: ioService.cpp  ioService.hpp
src/javac/src/bytecodeStructure/: attributeStructure.hpp  classFileStructure.hpp  codeAttributeStructure.hpp  constantPoolInfo.hpp  fieldFileStructure.hpp
src/javac/src/core/: compilerTypes.hpp  main.cpp
src/javac/src/draco/: abstractCodeStatement.hpp  abstractStatement.hpp
src/javac/src/draco/code/: assigment.cpp  assigment.hpp  call.cpp  call.hpp
src/javac/src/io/: ioService.cpp  ioService.hpp
src/javac/src/tokens/: lexMachine.cpp  lexMachine.hpp  token.hpp  tokenDefinition.hpp
src/javac/tokens/: lexMachine.cpp  lexMachine.hpp  tokenDefinition.hpp
src/javap/: javap_main.cpp  javap_main.h
src/lvm/base/: def.h  lvm.cpp  lvm.h  memory.cpp
src/lvm/base/memory/: init_lvm.cpp  init_method_engine.cpp  init_method_engine.h  init_vm_pool_engine.cpp  load_lvm_frames.cpp  load_lvm_frames.h  name_and_type.cpp
src/lvm/base/vm-types/: method.cpp  method.h
src/lvm/heap/: heap_controller.h
src/lvm/interpretor/: interpreter.cpp
src/lvm/native_calls/: jvm_types.h
src/stdlib/java/lang/: String.java
test/: HelloWorld.java  mainTest.cpp
vm/base/: def.h  lvm.cpp  lvm.h  memory.cpp  memory.h  thread.cpp  thread.h
vm/base/memory/: init_lvm.cpp  init_lvm.h  init_method_engine.cpp  init_method_engine.h  init_vm_pool_engine.cpp  init_vm_pool_engine.h  load_lvm_frames.cpp  load_lvm_frames.h  name_and_type.cpp  name_and_type.h  vm_pool.cpp  vm_pool.h
vm/base/vm-types/: method.cpp  method.h
vm/heap/: heap_controller.cpp  heap_controller.h
vm/interpretor/: interpreter.cpp  interpretor.h
vm/native_calls/: jdirect_call_manager.cpp  jdirect_call_manager.h  jvm_types.h
vm/type-system/: basic_primitive_type.cpp  basic_primitive_type.h
vm/type-system/types/reference/: object.cpp  object.h  return_address.cpp  return_address.h
vm/type-system/types/value/: byte.cpp  byte.h  char.cpp  char.h  double.cpp  double.h  float.cpp  float.h  int.cpp  int.h  long.cpp  long.h  short.cpp  short.h
(+15 files in other folders)
